--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,7 @@
 @import "./base/variable.css";
 @import "./base/typography.css";
 @import "./components/post.css";
+@import "./components/modal.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
